kubernetes/external-dns/test/resources/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dns-acceptance
  namespace: gateway
spec:
  parentRefs:
    - name: home-cloud
      sectionName: https
  hostnames:
    - test.home.antonu.org
  rules:
    - backendRefs:
        - name: dns-acceptance
          port: 8080
